Fixing z-index

--- a/style.css
+++ b/style.css
@@ -21,9 +21,7 @@ body{
   height: 100%;
   overflow: hidden;
   position: relative;
-  z-index: -1;
 }
-
 .background {
   display: block;
   position: absolute;
@@ -34,7 +32,7 @@ body{
   width: 100%;
   height: 100%;
   opacity:0.7;
-  z-index:-1;
+  z-index:-2;
   } 
 
 .center {
@@ -61,6 +59,7 @@ div.alok{
       border-radius:  15px 15px 15px 15px;
       backdrop-filter: blur(5px);
       box-shadow: 0px 0px 20px black;
+      z-index: -1;
       }
 
   
@@ -93,7 +92,7 @@ p.alok {
       position: relative;
       margin-left: 25px;
       margin-right: 25px;
-      z-index: +1;
+      z-index:0;
       }
 .link-preview {
       display: flex;
@@ -106,12 +105,12 @@ p.alok {
       border-radius: 10px;
       backdrop-filter: blur(10px);
       box-shadow: 0px 0px 20px black;
-      z-index+1;
+      z-index:0;
       }
 .link-preview img {
       width: 100%;
-      margin: auto
-      z-index: +1;
+      margin: auto;
+      z-index:-1
       }
   
            
@@ -6177,3 +6176,33 @@ p.alok {
           animation-delay: 1200ms;
 }
 
+.message {
+  position: absolute;
+  right: 20px;
+  bottom: 10px;
+  color: white;
+  font-family: "Josefin Slab", serif;
+  line-height: 27px;
+  font-size: 18px;
+  text-align: right;
+  pointer-events: none;
+  -webkit-animation: message-frames 1.5s ease 5s forwards;
+          animation: message-frames 1.5s ease 5s forwards;
+  opacity: 0;
+}
+@-webkit-keyframes message-frames {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes message-frames {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
